<?xml version="1.0" encoding="UTF-8"?>
<!--
   CODENVY CONFIDENTIAL
   __________________

   [2012] - [2013] Codenvy, S.A.
   All Rights Reserved.

   NOTICE:  All information contained herein is, and remains
   the property of Codenvy S.A. and its suppliers,
   if any.  The intellectual and technical concepts contained
   herein are proprietary to Codenvy S.A.
   and its suppliers and may be covered by U.S. and Foreign Patents,
   patents in process, and are protected by trade secret or copyright law.
   Dissemination of this information or reproduction of this material
   is strictly forbidden unless prior written permission is obtained
   from Codenvy S.A..
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.codenvy.ide</groupId>
        <artifactId>codenvy-ide-parent</artifactId>
        <version>$current_version$</version>
    </parent>
    <artifactId>codenvy-application-war</artifactId>
    <packaging>war</packaging>
    <name>Codenvy :: Packaging :: Application</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <generated.sources.directory>${project.build.directory}/generated-sources/gen</generated.sources.directory>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.google.gwt</groupId>
            <artifactId>gwt-servlet</artifactId>
            <scope>runtime</scope>
            <version>${com.google.gwt.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.gwt</groupId>
            <artifactId>gwt-user</artifactId>
            <scope>provided</scope>
            <version>${com.google.gwt.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.gwt.inject</groupId>
            <artifactId>gin</artifactId>
            <version>${com.google.gwt.gin.version}</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
            <version>${junit.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${org.slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>${org.slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>com.codenvy.ide</groupId>
            <artifactId>codenvy-ide-client</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.codenvy.ide</groupId>
            <artifactId>codenvy-ide-core</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.codenvy.ide</groupId>
            <artifactId>codenvy-ide-env-dummy</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.codenvy.ide</groupId>
            <artifactId>codenvy-ide-factory</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.codenvy.platform-api</groupId>
            <artifactId>codenvy-api-project</artifactId>
            <version>${codenvy.platform-api.version}</version>
        </dependency>
        <dependency>
            <groupId>com.codenvy.platform-api</groupId>
            <artifactId>codenvy-api-vfs</artifactId>
            <version>${codenvy.platform-api.version}</version>
        </dependency>
        <dependency>
            <groupId>com.codenvy.platform-api-gwt-client</groupId>
            <artifactId>codenvy-api-analytics-gwt-client</artifactId>
            <version>${codenvy.platform-api-gwt-client.version}</version>
        </dependency>
        <dependency>
            <groupId>com.codenvy.ide</groupId>
            <artifactId>codenvy-ext-java</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.codenvy.ide</groupId>
            <artifactId>codenvy-ext-web</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.codenvy.ide</groupId>
            <artifactId>codenvy-ext-git</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.codenvy.ide</groupId>
            <artifactId>codenvy-ext-ssh</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.codenvy.ide</groupId>
            <artifactId>codenvy-ext-builder</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.codenvy.ide</groupId>
            <artifactId>codenvy-ext-runner</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <scope>compile</scope>
            <version>${commons-io.version}</version>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
        </resources>

        <plugins>
            <!-- Source Generator invocation -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.2.1</version>
                <executions>
                    <execution>
                        <id>extManager-client</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>java</goal>
                        </goals>
                        <configuration>
                            <mainClass>com.codenvy.util.ExtensionManagerGenerator</mainClass>
                            <arguments>
                                <argument>--rootDir=${generated.sources.directory}</argument>
                            </arguments>
                        </configuration>
                    </execution>
                    <execution>
                        <id>IDEInjector-client</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>java</goal>
                        </goals>
                        <configuration>
                            <mainClass>com.codenvy.util.IDEInjectorGenerator</mainClass>
                            <arguments>
                                <argument>--rootDir=${generated.sources.directory}</argument>
                            </arguments>
                        </configuration>
                    </execution>
                    <execution>
                        <id>DtoRegistry-client</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>java</goal>
                        </goals>
                        <configuration>
                            <mainClass>com.codenvy.util.DtoFactoryVisitorRegistryGenerator</mainClass>
                            <arguments>
                                <argument>--rootDir=${generated.sources.directory}</argument>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- GWT Maven Plugin -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>gwt-maven-plugin</artifactId>
                <configuration>
                    <extraJvmArgs>-Xss512m -Xmx2048m -XX:MaxPermSize=1024m</extraJvmArgs>
                    <precompile>false</precompile>
                </configuration>
                <executions>
                    <execution>
                        <configuration>
                            <modules>
                                <module>com.codenvy.ide.IDEPlatform</module>
                                <module>com.codenvy.ide.ext.java.JavaParserWorker</module>
                            </modules>
                            <logLevel>INFO</logLevel>
                        </configuration>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <executions>
                    <execution>
                        <id>unwar-ide</id>
                        <phase>prepare-package</phase>
                        <configuration>
                            <tasks>
                                <move todir="${project.build.directory}/${project.artifactId}-${project.version}/_app/javaParserWorker">
                                    <fileset dir="${project.build.directory}/${project.artifactId}-${project.version}/javaParserWorker"/>
                                </move>
                            </tasks>
                        </configuration>
                        <goals>
                            <goal>run</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>2.1.1</version>
                <configuration>
                    <packagingIncludes>WEB-INF/lib/codenvy-commons-servlet-*.jar,
                        WEB-INF/lib/codenvy-commons-env-*.jar,
                        WEB-INF/lib/codenvy-commons-servlet-*.jar,
                        WEB-INF/lib/codenvy-commons-lang-*.jar,
                        WEB-INF/lib/codenvy-ide-env-dummy-*.jar,
                        WEB-INF/classes/com/codenvy/ide/servlet/*,
                        WEB-INF/classes/META-INF/,
                        _app/**
                    </packagingIncludes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>1.8</version>
                <executions>
                    <execution>
                        <id>add-source</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>add-source</goal>
                        </goals>
                        <configuration>
                            <sources>
                                <source>${generated.sources.directory}</source>
                            </sources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.google.code.sortpom</groupId>
                <artifactId>maven-sortpom-plugin</artifactId>
                <configuration>
                    <verifyFail>Warn</verifyFail>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <!--
    Add extension sources to allow GWT code server recompile it.
    This is a recommended (https://groups.google.com/d/msg/codehaus-mojo-gwt-maven-plugin-users/zvJ0IlGN7Fw/RbyteSEKXtoJ)
    workaround of a known bug of Maven GWT Plugin (https://jira.codehaus.org/browse/MGWT-332).
    -->
    <profiles>
        <profile>
            <id>customExtensionSources</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>build-helper-maven-plugin</artifactId>
                        <version>1.8</version>
                        <executions>
                            <execution>
                                <id>add-extension-sources</id>
                                <phase>generate-sources</phase>
                                <goals>
                                    <goal>add-source</goal>
                                </goals>
                                <configuration>
                                    <sources>
                                        <source>extension-sources/src/main/java</source>
                                        <source>extension-sources/src/main/resources</source>
                                    </sources>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
